implemented multi user by storing id node in database, query requires the use of the graphID
