# backend/src/config/swagger.json
@@ -258,40 +258,6 @@
   ],
   "paths": {
     "/schema/all": {
-      "get": {
-        "tags": [
-          "General"
-        ],
-        "description": "Retrieves **FULL** schema",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "entities": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/Entity"
-                  }
-                },
-                "relationships": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/Relationship"
-                  }
-                },
-                "generalisations": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/Generalisation"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "tags": [
           "General"
@@ -304,6 +270,11 @@
             "schema": {
               "type": "object",
               "properties": {
+                "graphID": {
+                  "type": "integer",
+                  "description": "Graph ID of the given ER Diagram",
+                  "example": 1
+                },
                 "entities": {
                   "type": "array",
                   "items": {
@@ -429,7 +400,10 @@
                         "y": 2
                       },
                       "parent": "1",
-                      "entities": ["3", "4"]
+                      "entities": [
+                        "3",
+                        "4"
+                      ]
                     }
                   ]
                 }
@@ -451,14 +425,86 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Failed operation",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
           }
         }
       }
     },
-    "/schema/entities": {
+    "/schema/all/{graphID}": {
+      "get": {
+        "parameters": [
+          {
+            "in": "path",
+            "name": "graphID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            },
+            "description": "The graph ID"
+          }
+        ],
+        "tags": [
+          "General"
+        ],
+        "description": "Retrieves **FULL** schema",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "entities": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/Entity"
+                  }
+                },
+                "relationships": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/Relationship"
+                  }
+                },
+                "generalisations": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/Generalisation"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failed operation",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
+          }
+        }
+      }
+    },
+    "/schema/entities/{graphID}": {
       "get": {
         "tags": [
           "Entities"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "graphID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            },
+            "description": "The graph ID"
+          }
         ],
         "description": "Returns **ALL** entities",
         "responses": {
@@ -470,14 +516,32 @@
                 "$ref": "#/definitions/Entity"
               }
             }
+          },
+          "400": {
+            "description": "Failed operation",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
           }
         }
       }
     },
-    "/schema/relationship": {
+    "/schema/relationship/{graphID}": {
       "get": {
         "tags": [
           "Relationships"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "graphID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            },
+            "description": "The graph ID"
+          }
         ],
         "description": "Returns **ALL** relationships",
         "responses": {
@@ -489,14 +553,32 @@
                 "$ref": "#/definitions/Relationship"
               }
             }
+          },
+          "400": {
+            "description": "Failed operation",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
           }
         }
       }
     },
-    "/schema/generalisation": {
+    "/schema/generalisation/{graphID}": {
       "get": {
         "tags": [
           "Generalisations"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "graphID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            },
+            "description": "The graph ID"
+          }
         ],
         "description": "Returns **ALL** generalisations",
         "responses": {
@@ -507,6 +589,12 @@
               "items": {
                 "$ref": "#/definitions/Generalisation"
               }
+            }
+          },
+          "400": {
+            "description": "Failed operation",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
             }
           }
         }
