# backend/src/controllers/schemaController.ts
@@ -19,38 +19,47 @@ class SchemaController {
         return SchemaController.instance
     }
 
-    public async addAllEntities(entities: Entity[]) {
+    public async getNextID() {
+        const nextID = await DatabaseController.getInstance().getNextID()
+        return nextID.records[0].toObject()['e'].properties.id.low
+    }
+
+    public async deleteOldGraph(graphID: number) {
+        await DatabaseController.getInstance().clearSubGraph(graphID);
+    }
+
+    public async addAllEntities(entities: Entity[], graphID: number) {
         for (var entity of entities) {
-            await DatabaseController.getInstance().createEntity(entity);
+            await DatabaseController.getInstance().createEntity(entity, graphID);
             for (var attribute of entity.attributes ?? []) {
-                await DatabaseController.getInstance().addAttribute(entity, attribute)
+                await DatabaseController.getInstance().addAttribute(entity, attribute, graphID)
             }
 
             for (var subset of entity.subsets ?? []) {
-                await DatabaseController.getInstance().createSubset(subset)
-                await DatabaseController.getInstance().addSubsets(entity, subset)
+                await DatabaseController.getInstance().createSubset(subset, graphID)
+                await DatabaseController.getInstance().addSubsets(entity, subset, graphID)
             }
         }
     }
 
-    public async addAllRelationships(relationships: Relationship[]) {
+    public async addAllRelationships(relationships: Relationship[], graphID: number) {
         for (var relationship of relationships) {
-            await DatabaseController.getInstance().addRelationship(relationship)
+            await DatabaseController.getInstance().addRelationship(relationship, graphID)
             for (var attribute of relationship.attributes ?? []) {
-                await DatabaseController.getInstance().addRelationshipAttribute(relationship, attribute)
+                await DatabaseController.getInstance().addRelationshipAttribute(relationship, attribute, graphID)
             }
         }
     }
 
-    public async addAllGeneralisations(generalisations: Generalisation[]) {
+    public async addAllGeneralisations(generalisations: Generalisation[], graphID: number) {
         for (var generalisation of generalisations) {
-            await DatabaseController.getInstance().addGeneralisation(generalisation)
+            await DatabaseController.getInstance().addGeneralisation(generalisation, graphID)
         }
     }
 
-    public async getAllEntities(): Promise<Map<string, Entity>> {
+    public async getAllEntities(graphID: number): Promise<Map<string, Entity>> {
 
-        var entityResult: QueryResult = await DatabaseController.getInstance().getAllEntities()
+        var entityResult: QueryResult = await DatabaseController.getInstance().getAllEntities(graphID)
 
         // Use hashmap to update entity O(1)
         const entitiesHashMap: Map<string, Entity> = new Map()
@@ -69,7 +78,7 @@ class SchemaController {
             }
         }
 
-        const entityWithAttributesResult: QueryResult = await DatabaseController.getInstance().getAllEntitiesWithAttributes()
+        const entityWithAttributesResult: QueryResult = await DatabaseController.getInstance().getAllEntitiesWithAttributes(graphID)
 
         for (var e of entityWithAttributesResult.records) {
             for (let key in e.toObject()) {
@@ -95,7 +104,7 @@ class SchemaController {
             }
         }
 
-        const entityWithSubsetsResult: QueryResult = await DatabaseController.getInstance().getAllSubsets()
+        const entityWithSubsetsResult: QueryResult = await DatabaseController.getInstance().getAllSubsets(graphID)
 
         for (var e of entityWithSubsetsResult.records) {
             for (let key in e.toObject()) {
@@ -124,9 +133,9 @@ class SchemaController {
         return entitiesHashMap
     }
 
-    public async getAllRelationships(): Promise<Map<string, Relationship>> {
+    public async getAllRelationships(graphID: number): Promise<Map<string, Relationship>> {
 
-        var relationshipResult: QueryResult = await DatabaseController.getInstance().getAllRelationships()
+        var relationshipResult: QueryResult = await DatabaseController.getInstance().getAllRelationships(graphID)
 
         // Use hashmap to update relationship O(1)
         const relationshipHashmap: Map<string, Relationship> = new Map()
@@ -164,7 +173,7 @@ class SchemaController {
             }
         }
 
-        const relationshipAttributeResult: QueryResult = await DatabaseController.getInstance().getAllRelationshipsWithAttributes()
+        const relationshipAttributeResult: QueryResult = await DatabaseController.getInstance().getAllRelationshipsWithAttributes(graphID)
 
         for (var e of relationshipAttributeResult.records) {
             for (let key in e.toObject()) {
@@ -194,8 +203,8 @@ class SchemaController {
         return relationshipHashmap
     }
 
-    public async getAllGeneralisations(): Promise<Generalisation[]> {
-        var generalisationResult: QueryResult = await DatabaseController.getInstance().getAllGeneralisations()
+    public async getAllGeneralisations(graphID: number): Promise<Generalisation[]> {
+        var generalisationResult: QueryResult = await DatabaseController.getInstance().getAllGeneralisations(graphID)
 
         const generalisations: Generalisation[] = []
 
