# backend/src/routes/schema.ts
@@ -11,34 +11,63 @@ router.post('/all', async function (req, res, next) {
     // TODO add error catching
     var modelAsJson = req.body;
 
-    var entities: Entity[] = modelAsJson.entities;
-    var relationships: Relationship[] = modelAsJson.relationships;
-    var generalisations: Generalisation[] = modelAsJson.generalisations;
+    var graphID: number = modelAsJson.graphID ?? undefined;
+    var entities: Entity[] = modelAsJson.entities ?? undefined;
+    var relationships: Relationship[] = modelAsJson.relationships ?? undefined;
+    var generalisations: Generalisation[] = modelAsJson.generalisations ?? undefined;
 
-    relationships.map((relationship: Relationship) => {
-        const lHConstraintsConvertion: Map<string, LHConstraint> = new Map()
-        Object.entries(relationship.lHConstraints).map((values) => {
-            lHConstraintsConvertion.set(values[0], values[1])
+    if (relationships !== undefined) {
+        relationships.map((relationship: Relationship) => {
+            const lHConstraintsConvertion: Map<string, LHConstraint> = new Map()
+            Object.entries(relationship.lHConstraints).map((values) => {
+                lHConstraintsConvertion.set(values[0], values[1])
+            })
+
+            relationship.lHConstraints = lHConstraintsConvertion
         })
+    }
 
-        relationship.lHConstraints = lHConstraintsConvertion
-    })
 
-    await SchemaController.getInstance().addAllEntities(entities);
-    await SchemaController.getInstance().addAllRelationships(relationships);
-    await SchemaController.getInstance().addAllGeneralisations(generalisations);
+    if (graphID === undefined) {
+        graphID = await SchemaController.getInstance().getNextID();
+    } else {
+        await SchemaController.getInstance().deleteOldGraph(graphID);
+    }
+
+    if (entities !== undefined) {
+        await SchemaController.getInstance().addAllEntities(entities, graphID);
+        if (relationships !== undefined) {
+            // relationships depend on entities being created first
+            await SchemaController.getInstance().addAllRelationships(relationships, graphID);
+        }
+
+        if (generalisations !== undefined) {
+            // generalisations depend on entities being created first
+            await SchemaController.getInstance().addAllGeneralisations(generalisations, graphID);
+        }
+    } else {
+        if (relationships !== undefined || generalisations !== undefined) {
+            return res.status(400).json({SUCCESS: false, message: 'Generalisation and relationships need entities first'});
+        }
+    }
 
     return res.status(OK).json({SUCCESS: true});
 })
 
-router.get('/all', async function (req, res, next) {
+router.get('/all/:graphID', async function (req, res, next) {
 
-    const entities = SchemaController.getInstance().getAllEntities()
+    var graphID = +req.params['graphID']
+
+    const entities = SchemaController.getInstance().getAllEntities(graphID)
 
     entities.then(function (entityMap: Map<string, Entity>) {
         const entities = Array.from(entityMap.values())
 
-        const relationships = SchemaController.getInstance().getAllRelationships()
+        if (entities.length === 0) {
+            return res.status(400).json({SUCCESS: false, message: `GraphID ${graphID} does not exist`});
+        }
+
+        const relationships = SchemaController.getInstance().getAllRelationships(graphID)
 
         relationships.then(function (relationshipMap: Map<string, Relationship>) {
             const relationships = Array.from(relationshipMap.values())
@@ -55,7 +84,7 @@ router.get('/all', async function (req, res, next) {
                 })
             })
 
-            const generalisations = SchemaController.getInstance().getAllGeneralisations()
+            const generalisations = SchemaController.getInstance().getAllGeneralisations(graphID)
 
             generalisations.then(function (generalisationResponse: Generalisation[]) {
                 return res.status(OK).json({
@@ -68,23 +97,38 @@ router.get('/all', async function (req, res, next) {
     })
 });
 
-router.get('/entities', async function (req, res, next) {
+router.get('/entities/:graphID', async function (req, res, next) {
 
-    const entities = SchemaController.getInstance().getAllEntities()
+    var graphID = +req.params['graphID']
+
+    const entities = SchemaController.getInstance().getAllEntities(graphID)
 
     entities.then(function (entityMap: Map<string, Entity>) {
         const entities = Array.from(entityMap.values())
+
+        if (entities.length === 0) {
+            return res.status(400).json({SUCCESS: false, message: `GraphID ${graphID} does not exist`});
+        }
+
         return res.status(OK).json({
             entities: entities
         });
     })
 });
 
-router.get('/relationship', async function (req, res, next) {
-    const relationships = SchemaController.getInstance().getAllRelationships()
+router.get('/relationship/:graphID', async function (req, res, next) {
+
+    var graphID = +req.params['graphID']
+
+    const relationships = SchemaController.getInstance().getAllRelationships(graphID)
 
     relationships.then(function (relationshipMap: Map<string, Relationship>) {
         const relationships = Array.from(relationshipMap.values())
+
+        if (relationships.length === 0) {
+            return res.status(400).json({SUCCESS: false, message: `GraphID ${graphID} does not exist`});
+        }
+
         const relationshipResponse: any[] = []
         relationships.map((relationship) => {
             const lHConstraintsConvertion: Map<string, String> = new Map()
@@ -103,10 +147,17 @@ router.get('/relationship', async function (req, res, next) {
     })
 });
 
-router.get('/generalisation', async function (req, res, next) {
-    const generalisations = SchemaController.getInstance().getAllGeneralisations()
+router.get('/generalisation/:graphID', async function (req, res, next) {
+
+    var graphID = +req.params['graphID']
+
+    const generalisations = SchemaController.getInstance().getAllGeneralisations(graphID)
 
     generalisations.then(function (generalisationResponse: Generalisation[]) {
+        if (generalisationResponse.length === 0) {
+            return res.status(400).json({SUCCESS: false, message: `GraphID ${graphID} does not exist`});
+        }
+
         return res.status(OK).json({
             generalisations: generalisationResponse
         });
